# aws-doc-ragqa

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.dvc/: config
config/: app.yaml  model.yaml  path.yaml  templates.yaml  vector_db.yaml
deployment/: deploy.sh
deployment/templates/: notification.json  s3-policy.json
docs/: Search_Documentation_Tool_POC.md
research/: .gitignore  Makefile  README.md  config.py  environment.yml  pyproject.toml  requirements.txt
research/.gemini/: settings.json
research/aws_doc_ragqa/: async_rag_pipeline.py  rag_eval_pipeline.py  rag_pipeline.py  run_eval.py
research/config/: app.yaml  nb.yaml  path.yaml  templates.yaml
research/data/: interim.dvc  processed.dvc  raw.dvc
research/notebooks/: 1.0-ll-data_analysis.ipynb  1.1-ll-data_chunk_index.ipynb  2.0-ll-evaluation.ipynb  __test__.ipynb
research/utils/: __init__.py  file_utils.py  yaml_utils.py
scripts/: upload_zip_to_s3.py
src/: __test__run.py  config.py
src/application/conversation_service/: app.py
src/application/evaluation_service/: rag_eval_pipeline.py  run_eval.py
src/application/rag_service/: build_index.py  rag_pipeline.py
src/handlers/: s3_handler.py
src/llm/: base.py  bedrock_client.py  gemini_client.py
src/utils/: __init__.py  file_utils.py  logger.py  model_utils.py  s3_utils.py
src/vector_database/: base.py  qdrant_vector_db_client.py
tests/: test_app.py
